tinyc/test/bad/ptr-to-void-add-flip.c
int main()
{
    void *p;
    3 + p;
    return 0;
}
